added blog post pages, need to edit them

--- a/pages/blog-post-rosies.html
+++ b/pages/blog-post-rosies.html
@@ -21,16 +21,10 @@
         </nav>
     </header>
     <main class=>
-        <h1>Welcome to my blog about My Pets!</h1>
+        <h1>Welcome to my blog about Rosies!</h1>
             <div class="photos">
-                <img src="../images/My-Pets-2.png" alt="My Pets photo">
+                <img src="../images/Rosies.png" alt="Rosies">
             </div>
-        <p>As shown in the photos above, I have 8 pets. Going from the top down and left to right, their names are as below:</p>
-                <li>- Oliver and Charlotte</li>
-                <li>- Jimmy-David and Julius Cheeser</li>
-                <li>- Cutie and Houdini</li>
-                <li>- Eugenie and Vapi</li> 
-        <h3>Mice</h3>
         <p>I originally bought the mice as I went with one of my best friends to buy more pet mice since two of hers had passed away and she only had one left. 
             Mice are very social so we had visited a nearby petshop and I saw one male mouse that had the most interesting patterns. Due to her mouse at the time 
             being a female, we needed to buy more females and weren't able to buy a male. We chose two other female mice and had left the petshop. The following 
@@ -40,34 +34,12 @@
             previous petshop which had mice that were only a month old. I had bought three being told and thinking that they were all males. Later that night, 
             I realised that one is a female and I didn't have another cage to separate her from her brothers. At this point, I had Jimmy-David, Julius Cheeser 
             and Eugenie. The same best friend, another friend and I named these mice.</p>
-        <p>The next day, I had already grown attached to the Eugenie so I decided to get her a friend/sister since I'm not sure whether the new mouse was from 
-            the same family. I bought the second female mouse, a second cage and the essentials for this cage. A different friend named this new female mouse, 
-            Vapi which is short for my favourite restaurant, Vapiano.</p>
-        <p>After looking on Gumtree, I had found a hairless mouse for my best friend, we had decided to pick up the hairless mouse a few days later. After this 
-            visit which was an hour away, my best friend was going home with a fourth mouse and I was going home with my fifth and sixth mice which are Cutie 
-            and Houdini. My mum had named Cutie and another friend, different to the previous friend had named Houdini. </p>
-        <h3>Kittens</h3>
-        <p>For a few months, I had wanted to purchase a kitten for my mum but I hadn't looked for any until earlier this year. When looking I had found it hard 
-            to find a rescue kitten that would be suitable and was actually available. After approximately a month of looking, I had enquired about a kitten but 
-            it had just been adopted. The lady that replied to my enquiry was able to provide information about a few kittens that were going to be available to 
-            adopt approximately two weeks later, but were only nine weeks at the time. Two weeks later, after Charlotte had fully recovered from surgery, I drove 
-            an hour with my best friend and her sister to pick Charlotte up. After picking her up, we had surprised my mum with her new kitten. She was definitely 
-            surprised and kind of didn't believe that she now had a kitten. She was very happy with Charlotte after the shock wore off. Charlotte made herself at 
-            home very quickly and is exactly the way they had described her in the information provided. Charlotte is a gorgeous and wonderful kitten who seemed 
-            to have been slightly bored after leaving a home with multiple cats and kittens.</p>
-        <p>I had seen a post about a gorgeous blue eyed kitten and had messaged the page to see whether it would be available. I found out that he would be 
-            available a few weeks later and that I was able to name him as well. I named him Oliver and had driven another hour with the same friends that I had 
-            picked Charlotte up with approximately a month after getting Charlotte. My mum wasn't too much of a fan of a second surprise kitten but after a few 
-            hours was happy we had him. Charlotte also wasn't a big fan of Oliver at all and didn't want anything to do with him for about a week after his arrival. 
-            Since he was so young, approximately 7 weeks old instead of 12, it was easier for him to get along with Charlotte and not get scared with her not being 
-            a fan of him. Their personalities are completely different and they are both absolutely wonderful to be around. Charlotte did get used to having him 
-            around shortly after a first week had gone by and they do at times get up to mischief together. </p>
-        <p>Please let me know what pets you have! You can do this by getting in touch with me through my Contact Me page!</p>
+        <p>If you are interested, I do recommend starting to learn some Auslan signs, you might've not noticed that you've already used a few before!</p>
         <h5>To view more of Angela Pogoda's latest blog posts, please see below:</h5>
         <a href="../pages/blog.html">Blog</a>
+        <a href="../pages/blog-post-my-pets.html">My Pets</a>
         <a href="../pages/blog-post-Auslan.html">Auslan</a>
         <a href="../pages/blog-post-the-pyjama-foundation.html">The Pyjama Foundation</a>
-        <a href="../pages/blog-post-rosies.html">Rosies</a>
         <a href="../pages/blog-post-Gardening.html">Gardening</a>
     </main>
 <!--the footer below is the fourth component of my portfolio-->
