--- a/pages/blog.html
+++ b/pages/blog.html
@@ -35,7 +35,7 @@
                 <div class="container blog-text">
                     <h5>Auslan | Published: 3rd November 2022</h5>
                     <p>I have had the opportunity to interact with numerous deaf or hard of hearing customers over the years. This has made me realise how important I find being able to learn and use sign language. Earlier this year, I completed two Introduction to Auslan courses and plan on continuing the more advanced courses after completing this bootcamp. I also find that the languages vary slightly by state extremely interesting.</p>
-                    <a href="">Click here to read more.</a>
+                    <a href="../pages/blog-post-Auslan.html">Click here to read more.</a>
                 </div>
         </div>
         <div class="blog-cards">
@@ -43,7 +43,7 @@
                 <div class="container blog-text">
                     <h5>The Pyjama Foundation | Published: 6th November 2022</h5>
                     <p>I recently learnt what the Pyjama Foundation’s goals are and how to become a Pyjama Angel to a Pyjama Child. This was due to a colleague mentioning that she is a Pyjama Angel. I am now a Pyjama Angel volunteer which is incredibly rewarding. Being a Pyjama Angel requires an hour of your personal time each week.</p>
-                    <a href="">Click here to read more.</a>
+                    <a href="../pages/blog-post-the-pyjama-foundation.html">Click here to read more.</a>
                 </div>
         </div>
         <div class="blog-cards">
@@ -51,7 +51,7 @@
                 <div class="container blog-text">
                     <h5>Rosies | Published: 9th November 2022</h5>
                     <p>I completed a 10km Darkness to Daylight run earlier this year, once completed I looked at the stalls in the seating area. There was a Rosies stall which I was interested in due to the possibility of helping the homeless. Being a Rosies volunteer requires four hours of your personal time each month. I have recently applied to become a volunteer with Rosies and am excited to experience another form of volunteering.</p>
-                    <a href="">Click here to read more.</a>
+                    <a href="../pages/blog-post-rosies.html">Click here to read more.</a>
                 </div>
         </div>
         <div class="blog-cards">
@@ -59,7 +59,7 @@
                 <div class="container blog-text">
                     <h5>Gardening | Published: 11th November 2022</h5>
                     <p>My mum has a very extensive garden with a variety of fruit, veggies, herbs, flowers and trees, amongst other plants. I have purchased a few succulents and cacti over the last few months and have enjoyed seeing their growth so far. I also did have a few bonsai plants but will need to purchase more after learning how to care for them better.</p>
-                    <a href="">Click here to read more.</a>
+                    <a href="../pages/blog-post-Gardening.html">Click here to read more.</a>
                 </div>
         </div>
     </main>
