Finalised the My Pets and Auslan blog pages.

--- a/pages/blog-post-Auslan.html
+++ b/pages/blog-post-Auslan.html
@@ -25,15 +25,12 @@
             <div class="photos">
                 <img src="../images/Auslan-alphabet-2.png" alt="Auslan Alphabet">
             </div>
-        <p>I originally bought the mice as I went with one of my best friends to buy more pet mice since two of hers had passed away and she only had one left. 
-            Mice are very social so we had visited a nearby petshop and I saw one male mouse that had the most interesting patterns. Due to her mouse at the time 
-            being a female, we needed to buy more females and weren't able to buy a male. We chose two other female mice and had left the petshop. The following 
-            day, I was very interested in purchasing the male mouse that we had seen, I had asked my best friend to see whether he was still available. After the 
-            phone call to the petshop, she had told me that he had already been sold and I can understand why he was very popular. At this point, I wanted 
-            to buy pet mice and she still wanted to buy a hairless one. I called various petshops over the next few days and had visited a different one to the 
-            previous petshop which had mice that were only a month old. I had bought three being told and thinking that they were all males. Later that night, 
-            I realised that one is a female and I didn't have another cage to separate her from her brothers. At this point, I had Jimmy-David, Julius Cheeser 
-            and Eugenie. The same best friend, another friend and I named these mice.</p>
+        <p>As displayed in the Auslan blog preview, I have completed two Introduction to Auslan courses and am also looking forward to continuing my learning after I have completed this Web Development bootcamp!</p>
+        <p>The picture above shows the Auslan Alphabet which is what I habe learnt amongst other things sunch as numbers, grocery items amongst other things.</p>
+        <p>The courses that I completed have the option to be online or in-person. I'm fortunate to live close to one of the in-person facilities. 
+            When learning Auslan, it is recommended to attend events for the deaf/hard of hearing community to be exposed to the language and culture 
+            more. This will increase knowledge and understaning in so many areas. 
+        </p>
         <p>If you are interested, I do recommend starting to learn some Auslan signs, you might've not noticed that you've already used a few before!</p>
         <h5>To view more of Angela Pogoda's latest blog posts, please see below:</h5>
         <a href="../pages/blog.html">Blog</a>
