Finalised The Pyjama Foundation, Rosies and Gardening blog pages

--- a/pages/blog-post-Gardening.html
+++ b/pages/blog-post-Gardening.html
@@ -25,7 +25,16 @@
             <div class="photos">
                 <img src="../images/plants-2.png" alt="Garden Plants">
             </div>
-        <p>I originally bought the mice as I went with one of my best friends to buy more pet mice</p>
+        <p>My mum has been an avid gardener for years. Creating our front and backyards from the perimeters inwards full of extremely well looked 
+            after and interesting plants. There are quite a few plants that we have been able to eat from such as Spanish basil, blueberries, 
+            oranges, lemons, dragon fruit and so much more. </p>
+        <p>We have a large range of plants which aren't edible as well which include palm trees, succulents and ferns amongst others. I have definitely 
+            been interested in gardening over the years but other interests have taken priority. I currently have a lot of succulent plants which I 
+            repotted recently, a cactus and I am also growing carrots. I didn't know at the time of planting the carrots that they should be separated 
+            especially if the plant is already established, otherwise they might not grow nearly as well as they could. I do hope to learn more and 
+            have even more plants in the future. </p>
+        <p>Please feel free to provide any plant tips and tricks by reaching out through the Contact Me page.</p>
+        <h5>To view more of Angela Pogoda's latest blog posts, please see below:</h5>
         <a href="../pages/blog.html">Blog</a>
         <a href="../pages/blog-post-my-pets.html">My Pets</a>
         <a href="../pages/blog-post-Auslan.html">Auslan</a>
