--- a/pages/blog-post-rosies.html
+++ b/pages/blog-post-rosies.html
@@ -25,16 +25,15 @@
             <div class="photos">
                 <img src="../images/Rosies.png" alt="Rosies">
             </div>
-        <p>I originally bought the mice as I went with one of my best friends to buy more pet mice since two of hers had passed away and she only had one left. 
-            Mice are very social so we had visited a nearby petshop and I saw one male mouse that had the most interesting patterns. Due to her mouse at the time 
-            being a female, we needed to buy more females and weren't able to buy a male. We chose two other female mice and had left the petshop. The following 
-            day, I was very interested in purchasing the male mouse that we had seen, I had asked my best friend to see whether he was still available. After the 
-            phone call to the petshop, she had told me that he had already been sold and I can understand why he was very popular. At this point, I wanted 
-            to buy pet mice and she still wanted to buy a hairless one. I called various petshops over the next few days and had visited a different one to the 
-            previous petshop which had mice that were only a month old. I had bought three being told and thinking that they were all males. Later that night, 
-            I realised that one is a female and I didn't have another cage to separate her from her brothers. At this point, I had Jimmy-David, Julius Cheeser 
-            and Eugenie. The same best friend, another friend and I named these mice.</p>
-        <p>If you are interested, I do recommend starting to learn some Auslan signs, you might've not noticed that you've already used a few before!</p>
+        <p>As mentioned in the Rosies blog post preview, I had come across Rosies after completing a 10km Darkness to Daylight run earlier this year.
+            This run was rewarding in itself, but I was even happier that I had found another thing that I'm interested in. I signed up to be a 
+            volunteer while at the Rosies stall and had been waiting to hear back. I had checked their website to see whether they had available spots 
+            for volunteering. At this stage, they did have enough volunteers. I had waited a few months and mentioned Rosies to a couple of colleages, 
+            one is already a volunteer and has been for a few years and the other had mentioned that Rosies were now taking more applications for the 
+            areas I had mentioned. I recently applied and am very excited to start volunteering. They cover a large range of areas and have multiple 
+            time slots available throughout the week and weekend, which is extremely helpful when working around other commitments such as work and 
+            this Web Development bootcamp in particular.</p>
+        <p>To find out more information, please visit the <a href="https://rosies.org.au/">Rosies website</a>.</p>
         <h5>To view more of Angela Pogoda's latest blog posts, please see below:</h5>
         <a href="../pages/blog.html">Blog</a>
         <a href="../pages/blog-post-my-pets.html">My Pets</a>
