--- a/pages/blog-post-the-pyjama-foundation.html
+++ b/pages/blog-post-the-pyjama-foundation.html
@@ -25,16 +25,13 @@
             <div class="photos">
                 <img src="../images/The-Pyjama-Foundation.png" alt="The Pyjama Foundation">
             </div>
-        <p>I originally bought the mice as I went with one of my best friends to buy more pet mice since two of hers had passed away and she only had one left. 
-            Mice are very social so we had visited a nearby petshop and I saw one male mouse that had the most interesting patterns. Due to her mouse at the time 
-            being a female, we needed to buy more females and weren't able to buy a male. We chose two other female mice and had left the petshop. The following 
-            day, I was very interested in purchasing the male mouse that we had seen, I had asked my best friend to see whether he was still available. After the 
-            phone call to the petshop, she had told me that he had already been sold and I can understand why he was very popular. At this point, I wanted 
-            to buy pet mice and she still wanted to buy a hairless one. I called various petshops over the next few days and had visited a different one to the 
-            previous petshop which had mice that were only a month old. I had bought three being told and thinking that they were all males. Later that night, 
-            I realised that one is a female and I didn't have another cage to separate her from her brothers. At this point, I had Jimmy-David, Julius Cheeser 
-            and Eugenie. The same best friend, another friend and I named these mice.</p>
-        <p>If you are interested, I do recommend starting to learn some Auslan signs, you might've not noticed that you've already used a few before!</p>
+        <p>In my last job, we had celebrated Pyjama Day in the office, this raised awareness for The Pyjama Foundation. I remember in primary and high 
+            school that we were able to donate to The Pyjama Foundation. At the time, I didn't understand what it was. Recently, I had gathered more 
+            information, some from my colleague and the rest from The Pyjama Foundation's website or throughout the application process. One of the goals 
+            of a Pyjama Angel is to help the Pyjama Child learn to read better. Another is for the Pyjama Angel to be a consistent part of the Pyjama 
+            Child's life for the time that you're visiting them, especially since the main goal is to reunite the child with their parents.</p>
+        <p>I have found that being a Pyjama Angel is incredibly rewarding and I'm excited to attend every visit just like I was the first. </p>
+        <p>To find out more, please see more information on <a href="https://thepyjamafoundation.com/">The Pyjama Foundations website</a>.</p>
         <h5>To view more of Angela Pogoda's latest blog posts, please see below:</h5>
         <a href="../pages/blog.html">Blog</a>
         <a href="../pages/blog-post-my-pets.html">My Pets</a>
