Added information to readme.md.

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -35,6 +35,7 @@
                 <li>- Human Resources</li> 
         <p>I’m hoping to include Web Development in this list shortly.</p>
         <p>For further details regarding my work history, please see my resume below.</p>
+<!--the anchor tag below is my my third graphical component and includes a hover animation with a darker sandy colour-->
         <a href="../pages/Angela-Pogoda-Portfolio-Resume.pdf" alt="Download Resume">Download Resume</a>
     </main>
 <!--the footer below is the fourth component of my portfolio-->
