--- a/pages/contact-me.html
+++ b/pages/contact-me.html
@@ -23,6 +23,8 @@
         <h1>Contact Me</h1>
         <p>Please feel free to contact me through the form below.</p>
         <p>Please expect a response within the next 3 days. I look forward to getting to know you!</p>
+<!--the form below is my fifth component of my portfolio-->
+<!--the text fields of this form are the first graphical component of my portfolio-->
         <form action="/" method="get">
             <label for="Name"></label>
             <input type="text" id="Name" name="Name" size="40" placeholder="Please enter your full name">
@@ -32,6 +34,7 @@
             <input type="phone number" id="Phone Number" size="40" placeholder="Please enter your phone number">
             <label for="Message"></label>
             <input type="text" id="Message" name="Message" size="40" placeholder="Please enter your message">
+<!--the button below is my second graphical component and includes a hover animation with a darker sandy colour-->
             <button>Submit</button> 
         </form>
     </main>
