--- a/pages/blog-post-rosies.html
+++ b/pages/blog-post-rosies.html
@@ -23,7 +23,7 @@
     <main class=>
         <h1>Welcome to my blog about Rosies!</h1>
             <div class="photos">
-                <img src="../images/Rosies.png" alt="Rosies">
+                <img src="../images/Rosies-2.png" alt="Rosies">
             </div>
         <p>As mentioned in the Rosies blog post preview, I had come across Rosies after completing a 10km Darkness to Daylight run earlier this year.
             This run was rewarding in itself, but I was even happier that I had found another thing that I'm interested in. I signed up to be a 
