Added references on blog page and blog post pages.

--- a/pages/blog-post-Auslan.html
+++ b/pages/blog-post-Auslan.html
@@ -24,7 +24,8 @@
         <h1>Welcome to my blog about Auslan!</h1>
             <div class="photos">
                 <img src="../images/Auslan-alphabet-2.png" alt="Auslan Alphabet">
-            </div>
+                </div>
+        <p>Deafblind Victoria (2021)</p>
         <p>As displayed in the Auslan blog preview, I have completed two Introduction to Auslan courses and am also looking forward to continuing my learning after I have completed this Web Development bootcamp!</p>
         <p>The picture above shows the Auslan Alphabet which is what I habe learnt amongst other things sunch as numbers, grocery items amongst other things.</p>
         <p>The courses that I completed have the option to be online or in-person. I'm fortunate to live close to one of the in-person facilities. 
