--- a/pages/blog-post-rosies.html
+++ b/pages/blog-post-rosies.html
@@ -25,6 +25,7 @@
             <div class="photos">
                 <img src="../images/Rosies-2.png" alt="Rosies">
             </div>
+        <p>Rosies (2022)</p>
         <p>As mentioned in the Rosies blog post preview, I had come across Rosies after completing a 10km Darkness to Daylight run earlier this year.
             This run was rewarding in itself, but I was even happier that I had found another thing that I'm interested in. I signed up to be a 
             volunteer while at the Rosies stall and had been waiting to hear back. I had checked their website to see whether they had available spots 
