--- a/pages/blog-post-the-pyjama-foundation.html
+++ b/pages/blog-post-the-pyjama-foundation.html
@@ -25,6 +25,7 @@
             <div class="photos">
                 <img src="../images/The-Pyjama-Foundation-2.png" alt="The Pyjama Foundation">
             </div>
+        <p>The Pyjama Foundation (2022)</p>
         <p>In my last job, we had celebrated Pyjama Day in the office, this raised awareness for The Pyjama Foundation. I remember in primary and high 
             school that we were able to donate to The Pyjama Foundation. At the time, I didn't understand what it was. Recently, I had gathered more 
             information, some from my colleague and the rest from The Pyjama Foundation's website or throughout the application process. One of the goals 
