almost completed readme.md and completed all pages.

--- a/pages/blog-post-my-pets.html
+++ b/pages/blog-post-my-pets.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
     <title>Angela Pogoda's Portfolio</title>
-<head>
+</head>
 <body>
 <!--the header below is the first component of my portfolio-->
     <header class="header">
@@ -20,16 +20,18 @@
             <a href="../pages/contact-me.html">Contact Me</a>
         </nav>
     </header>
-    <main class=>
+    <main>
         <h1>Welcome to my blog about My Pets!</h1>
             <div class="photos">
                 <img src="../images/My-Pets-2.png" alt="My Pets photo">
             </div>
         <p>As shown in the photos above, I have 8 pets. Going from the top down and left to right, their names are as below:</p>
-                <li>- Oliver and Charlotte</li>
-                <li>- Jimmy-David and Julius Cheeser</li>
-                <li>- Cutie and Houdini</li>
-                <li>- Eugenie and Vapi</li> 
+            <ul>
+                <li>Oliver and Charlotte</li>
+                <li>Jimmy-David and Julius Cheeser</li>
+                <li>Cutie and Houdini</li>
+                <li>Eugenie and Vapi</li> 
+            </ul>
         <h3>Mice</h3>
         <p>I originally bought the mice as I went with one of my best friends to buy more pet mice since two of hers had passed away and she only had one left. 
             Mice are very social so we had visited a nearby petshop and I saw one male mouse that had the most interesting patterns. Due to her mouse at the time 
@@ -90,5 +92,4 @@
         </div>
     </footer>
 </body>
-</head>
 </html>
