--- a/pages/blog-post-rosies.html
+++ b/pages/blog-post-rosies.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
     <title>Angela Pogoda's Portfolio</title>
-<head>
+</head>
 <body>
 <!--the header below is the first component of my portfolio-->
     <header class="header">
@@ -20,7 +20,7 @@
             <a href="../pages/contact-me.html">Contact Me</a>
         </nav>
     </header>
-    <main class=>
+    <main>
         <h1>Welcome to my blog about Rosies!</h1>
             <div class="photos">
                 <img src="../images/Rosies-2.png" alt="Rosies">
@@ -62,5 +62,4 @@
         </div>
     </footer>
 </body>
-</head>
 </html>
