--- a/pages/blog.html
+++ b/pages/blog.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
     <title>Angela Pogoda's Portfolio</title>
-<head>
+</head>
 <body>
 <!--the header below is the first component of my portfolio-->
     <header class="header">
@@ -22,8 +22,9 @@
     <main class="blog">
         <h1>Blog</h1>
 <!--the blog cards below are the third component of my portfolio-->
+<!--the images below is are graphical component of my portfolio-->
         <div class="blog-cards">
-            <img class="my-pets" src="../images/My-Pets.jpg" alt="My Pets icon"></a>
+            <img class="my-pets" src="../images/My-Pets.jpg" alt="My Pets icon">
                 <div class="container blog-text">
                     <h5>My Pets | Published: 1st November 2022</h5>
                     <p>I currently have 8 pets. I have two boy mice, four girl mice, one girl kitten and a boy kitten. I have had the mice for a year and the kittens for approximately eight months. I didn't intend on having mice or kittens as pets, especially at the same time but I'm really happy that they are in my life!</p>
@@ -31,7 +32,7 @@
                 </div>
         </div>
         <div class="blog-cards">
-            <img src="../images/Auslan-alphabet.jpg" alt="Auslan Alphabet icon"></a>
+            <img src="../images/Auslan-alphabet.jpg" alt="Auslan Alphabet icon">
                     <div class="container blog-text">
                     <h5>Auslan | Published: 3rd November 2022</h5>
                     <p>I have had the opportunity to interact with numerous deaf or hard of hearing customers over the years. This has made me realise how important I find being able to learn and use sign language. Earlier this year, I completed two Introduction to Auslan courses and plan on continuing the more advanced courses after completing this bootcamp. I also find that the languages vary slightly by state extremely interesting.</p>
@@ -40,7 +41,7 @@
                 </div>
         </div>
         <div class="blog-cards">
-            <img src="../images/The-Pyjama-Foundation.png" alt="The Pyjama Foundation icon"></a>
+            <img src="../images/The-Pyjama-Foundation.png" alt="The Pyjama Foundation icon">
                 <div class="container blog-text">
                     <h5>The Pyjama Foundation | Published: 6th November 2022</h5>
                     <p>I recently learnt what the Pyjama Foundation’s goals are and how to become a Pyjama Angel to a Pyjama Child. This was due to a colleague mentioning that she is a Pyjama Angel. I am now a Pyjama Angel volunteer which is incredibly rewarding. Being a Pyjama Angel requires an hour of your personal time each week.</p>
@@ -49,7 +50,7 @@
                 </div>
         </div>
         <div class="blog-cards">
-            <img src="../images/Rosies.png" alt="Rosies icon"></a>
+            <img src="../images/Rosies.png" alt="Rosies icon">
                 <div class="container blog-text">
                     <h5>Rosies | Published: 9th November 2022</h5>
                     <p>I completed a 10km Darkness to Daylight run earlier this year, once completed I looked at the stalls in the seating area. There was a Rosies stall which I was interested in due to the possibility of helping the homeless. Being a Rosies volunteer requires four hours of your personal time each month. I have recently applied to become a volunteer with Rosies and am excited to experience another form of volunteering.</p>
@@ -58,7 +59,7 @@
                 </div>
         </div>
         <div class="blog-cards">
-            <img src="../images/Plants.jpg" alt="Plants icon"></a>
+            <img src="../images/Plants.jpg" alt="Plants icon">
                 <div class="container blog-text">
                     <h5>Gardening | Published: 11th November 2022</h5>
                     <p>My mum has a very extensive garden with a variety of fruit, veggies, herbs, flowers and trees, amongst other plants. I have purchased a few succulents and cacti over the last few months and have enjoyed seeing their growth so far. I also did have a few bonsai plants but will need to purchase more after learning how to care for them better.</p>
@@ -86,5 +87,4 @@
         </div>
     </footer>
 </body>
-</head>
 </html>
