--- a/pages/contact-me.html
+++ b/pages/contact-me.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
     <title>Angela Pogoda's Portfolio</title>
-<head>
+</head>
 <body>
 <!--the header below is the first component of my portfolio-->
     <header class="header">
@@ -26,13 +26,9 @@
 <!--the form below is my fifth component of my portfolio-->
 <!--the text fields of this form are the first graphical component of my portfolio-->
         <form action="/" method="get">
-            <label for="Name"></label>
             <input type="text" id="Name" name="Name" size="40" placeholder="Please enter your full name">
-            <label for="Email"></label>
             <input type="email" required id="Email" name="Email" size="40" placeholder="Please enter your email address">
-            <label for="Phone Number"></label>
-            <input type="phone number" id="Phone Number" size="40" placeholder="Please enter your phone number">
-            <label for="Message"></label>
+            <input type="number" id="Phone-Number" size="40" placeholder="Please enter your phone number">
             <input type="text" id="Message" name="Message" size="40" placeholder="Please enter your message">
 <!--the button below is my second graphical component and includes a hover animation with a darker sandy colour-->
             <button>Submit</button> 
@@ -58,5 +54,4 @@
         </div>
     </footer>
 </body>
-</head>
 </html>
