--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
     <title>Angela Pogoda's Portfolio</title>
-<head>
+</head>
 <body>
 <!--the header below is the first component of my portfolio-->
     <header class="header">
@@ -22,21 +22,24 @@
     <main class="about-me">
         <h1>About Me</h1>
             <div class="photos">
+<!--the image below is a graphical component of my portfolio-->
                 <img src="../images/Angela-Pogoda-photo.png" alt="Angela Pogoda photo">
             </div>
         <p>Hi! My name is Angela Pogoda, I recently graduated university with a Bachelor of Business minoring in Human Resources and Marketing. I currently work in Human Resources and am excited to also start working as a Web Developer. I’m interested to learn about the different areas within Web Development and what is required to make things function. I have worked in a few different industries and believe that I have transferrable skills that are already helping me learn about Web Development.</p>
         <h1>Work History</h1>
         <p>My work history over the last 10 years has ranged from working in:</p>
-                <li>- Hospitality</li>
-                <li>- Retail</li>
-                <li>- Real Estate</li>
-                <li>- Insurance</li> 
-                <li>- Administration and</li>
-                <li>- Human Resources</li> 
+            <ul>
+                <li>Hospitality</li>
+                <li>Retail</li>
+                <li>Real Estate</li>
+                <li>Insurance</li> 
+                <li>Administration and</li>
+                <li>Human Resources</li> 
+            </ul>
         <p>I’m hoping to include Web Development in this list shortly.</p>
         <p>For further details regarding my work history, please see my resume below.</p>
 <!--the anchor tag below is my my third graphical component and includes a hover animation with a darker sandy colour-->
-        <a href="../pages/Angela-Pogoda-Portfolio-Resume.pdf" alt="Download Resume">Download Resume</a>
+        <a href="../pages/Angela-Pogoda-Portfolio-Resume.pdf">Download Resume</a>
     </main>
 <!--the footer below is the fourth component of my portfolio-->
     <footer class="footer">
@@ -58,5 +61,4 @@
         </div>
     </footer>
 </body>
-</head>
 </html>
