--- a/pages/projects.html
+++ b/pages/projects.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
     <title>Angela Pogoda's Portfolio</title>
-<head>
+</head>
 <body>
 <!--the header below is the first component of my portfolio-->
     <header class="header">
@@ -22,16 +22,18 @@
     <main>
         <h1>Projects</h1>
         <p>I'm aiming to work on a few projects where possible around the Web Development course. This is to improve my skills and ensure that I'm understanding the areas within Web Development the best I can. These include creating:</p>
-        <p>Front-End projects:</p>
-            <li>- A time converter which can calculate days to months and more</li>
-            <li>- A website that can read QR codes</li>
-            <li>- A clone of a website that already exists</li>
-        <p>Back-End projects:</p>
-            <li>- Algorithms</li>
-            <li>- Something similar to Instagram profile page layouts, Netflix or Pinterest</li>
-        <p>Full Stack projects:</p>
-            <li>- An app with games</li>
-            <li>- An app similar to Woolworths </li>
+        <ul>
+            <p>Front-End projects:</p>
+                <li>A time converter which can calculate days to months and more</li>
+                <li>A website that can read QR codes</li>
+                <li>A clone of a website that already exists</li>
+            <p>Back-End projects:</p>
+                <li>Algorithms</li>
+                <li>Something similar to Instagram profile page layouts, Netflix or Pinterest</li>
+            <p>Full Stack projects:</p>
+                <li>An app with games</li>
+                <li>An app similar to Woolworths </li>
+        </ul>
     </main>
 <!--the footer below is the fourth component of my portfolio-->
     <footer class="footer">
@@ -53,5 +55,4 @@
         </div>
     </footer>
 </body>
-</head>
 </html>
