moved index.html file out of pages folder and editted each anchor tag to index.html, hoping this will help to successfully deploy to netlify.

--- a/pages/blog-post-Auslan.html
+++ b/pages/blog-post-Auslan.html
@@ -11,7 +11,7 @@
 <!--the header below is the first component of my portfolio-->
     <header class="header">
 <!--the logo below is the second component of my portfolio-->
-            <a href="../pages/index.html" class="logo"><img src="../images/Logo.jpg" alt="Angela Pogoda Logo icon"></a>
+            <a href="./pages/index.html" class="logo"><img src="../images/Logo.jpg" alt="Angela Pogoda Logo icon"></a>
         <nav class="nav-items">
             <a href="../pages/index.html">Home</a>
             <a href="../pages/about-me.html">About Me</a>
