--- a/pages/blog.html
+++ b/pages/blog.html
@@ -13,7 +13,7 @@
 <!--the logo below is the second component of my portfolio-->
             <a href="../pages/index.html" class="logo"><img src="../images/Logo.jpg" alt="Angela Pogoda Logo icon"></a>
         <nav class="nav-items">
-            <a href="../pages/index.html"><strong>Home</strong></a>
+            <a href="./pages/index.html"><strong>Home</strong></a>
             <a href="../pages/about-me.html"><strong>About Me</strong></a>
             <a href="../pages/projects.html"><strong>Projects</strong></a>
             <a href="../pages/contact-me.html"><strong>Contact Me</strong></a>
