trying to fix index.html and deployment issues.

--- a/pages/contact-me.html
+++ b/pages/contact-me.html
@@ -11,9 +11,9 @@
 <!--the header below is the first component of my portfolio-->
     <header class="header">
 <!--the logo below is the second component of my portfolio-->
-            <a href="../pages/index.html" class="logo"><img src="../images/Logo.jpg" alt="Angela Pogoda Logo icon"></a>
+            <a href="./index.html" class="logo"><img src="../images/Logo.jpg" alt="Angela Pogoda Logo icon"></a>
         <nav class="nav-items">
-            <a href="./pages/index.html"><strong>Home</strong></a>
+            <a href="./index.html"><strong>Home</strong></a>
             <a href="../pages/about-me.html"><strong>About Me</strong></a>
             <a href="../pages/projects.html"><strong>Projects</strong></a>
             <a href="../pages/blog.html"><strong>Blog</strong></a>
