--- a/pages/blog-post-rosies.html
+++ b/pages/blog-post-rosies.html
@@ -13,7 +13,7 @@
 <!--the logo below is the second component of my portfolio-->
             <a href="./index.html" class="logo"><img src="../images/Logo.jpg" alt="Angela Pogoda Logo icon"></a>
         <nav class="nav-items">
-            <a href=".//index.html">Home</a>
+            <a href="./index.html">Home</a>
             <a href="../pages/about-me.html">About Me</a>
             <a href="../pages/projects.html">Projects</a>
             <a href="../pages/blog.html">Blog</a>
