--- a/pages/contact-me.html
+++ b/pages/contact-me.html
@@ -26,9 +26,13 @@
 <!--the form below is my fifth component of my portfolio-->
 <!--the text fields of this form are the first graphical component of my portfolio-->
         <form action="/" method="get">
+            <label for="full name"></label>
             <input type="text" id="Name" name="Name" size="40" placeholder="Please enter your full name">
+            <label for="email"></label>
             <input type="email" required id="Email" name="Email" size="40" placeholder="Please enter your email address">
-            <input type="number" id="Phone-Number" size="40" placeholder="Please enter your phone number">
+            <label for="phone"></label>
+            <input type="tel" id="Phone" name="Phone" size="40" placeholder="Please enter your number">
+            <label for="message"></label>
             <input type="text" id="Message" name="Message" size="40" placeholder="Please enter your message">
 <!--the button below is my second graphical component and includes a hover animation with a darker sandy colour-->
             <button>Submit</button> 
